--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html eng>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,26 +8,39 @@
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/font-awesome.min.css">
 
-<link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,600" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Varela+Round|Work+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,600" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Varela+Round|Work+Sans" rel="stylesheet">
 </head>
+
 <body>
-  <button  onclick="scrollToTop()" class="btn_ontop"><span class="fa fa-angle-double-up"></span></button>
+  <button onclick="scrollToTop()" class="btn_ontop"><span class="fa fa-angle-double-up"></span></button>
   <main class="content">
     <section class="content__container">
       <h1 class="title">Musca Radu Paul</h1>
       <h3 class="subtitle">"Do not take life too seriously. You will never get out of it alive" - Elbert Hubbard</h3>
       <button class="menu__responsive"><span class="fa fa-navicon"></span>Menu</button>
       <ul class="menu list">
-        <a href="#despre" alt="">  <li class="menu__item">Despre mine</li></a>
-        <a href="#jobs" alt=""><li class="menu__item">Exprienta</li></a>
-        <a href="#education" alt=""><li class="menu__item">Educatie</li></a>
-        <a href="#languages" alt=""><li class="menu__item">Limbi vorbite</li></a>
-        <a href="#portfolio" alt=""><li class="menu__item">Portfolio</li></a>
-        <a href="#skills" alt=""><li class="menu__item">Skills</li></a>
+        <a href="#despre" alt="">
+          <li class="menu__item">Despre mine</li>
+        </a>
+        <a href="#jobs" alt="">
+          <li class="menu__item">Exprienta</li>
+        </a>
+        <a href="#education" alt="">
+          <li class="menu__item">Educatie</li>
+        </a>
+        <a href="#languages" alt="">
+          <li class="menu__item">Limbi vorbite</li>
+        </a>
+        <a href="#portfolio" alt="">
+          <li class="menu__item">Portfolio</li>
+        </a>
+        <a href="#skills" alt="">
+          <li class="menu__item">Skills</li>
+        </a>
       </ul>
       <div class="divider"></div>
-      </section>
+    </section>
     <aside class="side__content">
       <div class="profile__avatar">
         <img src="./images/avatar.jpg" alt="">
@@ -58,9 +72,15 @@
         </li>
       </ul>
       <ul class="social list">
-        <a href="https://www.facebook.com/musca.radu"><li class="social__btn fb"><span class="fa fa-facebook"></span></li></a>
-        <a href="https://www.facebook.com/musca.radu"><li class="social__btn linkedin"><span class="fa fa-linkedin"></span></li></a>
-        <a href="https://www.facebook.com/musca.radu"><li class="social__btn insta"><span class="fa fa-instagram"></span></li></a>
+        <a href="https://www.facebook.com/musca.radu">
+          <li class="social__btn fb"><span class="fa fa-facebook"></span></li>
+        </a>
+        <a href="https://www.facebook.com/musca.radu">
+          <li class="social__btn linkedin"><span class="fa fa-linkedin"></span></li>
+        </a>
+        <a href="https://www.facebook.com/musca.radu">
+          <li class="social__btn insta"><span class="fa fa-instagram"></span></li>
+        </a>
       </ul>
     </aside>
     <section class="content__container">
@@ -68,14 +88,18 @@
         <h1 class="content__title">Despre mine</h1>
         <div onclick="hide()" class="content__hide"><span class="fa fa-minus"></span></div>
         <div class="content__text">
-          <p>Lorem Ipsum este pur şi simplu o machetă pentru text a industriei tipografice. Lorem Ipsum a fost macheta standard a industriei încă din secolul al XVI-lea, când un tipograf anonim a luat o planşetă de litere şi le-a amestecat pentru a crea o carte demonstrativă pentru literele respective. Nu doar că a supravieţuit timp de cinci secole, dar şi a facut saltul în tipografia electronică practic neschimbată. A fost popularizată în anii '60 odată cu ieşirea colilor Letraset care conţineau pasaje Lorem Ipsum, iar mai recent, prin programele de publicare pentru calculator, ca Aldus PageMaker care includeau versiuni de Lorem Ipsum.</p>
-          <p>Lorem Ipsum este pur şi simplu o machetă pentru text a industriei tipografice. Lorem Ipsum a fost macheta standard a industriei încă din secolul al XVI-lea, când un tipograf anonim a luat o planşetă de litere şi le-a amestecat pentru a crea o carte demonstrativă pentru literele respective. Nu doar că a supravieţuit timp de cinci secole, dar şi a facut saltul în tipografia electronică practic neschimbată. A fost popularizată în anii '60 odată cu ieşirea colilor Letraset care conţineau pasaje Lorem Ipsum, iar mai recent, prin programele de publicare pentru calculator, ca Aldus PageMaker care includeau versiuni de Lorem Ipsum.</p>
+          <p>Lorem Ipsum este pur şi simplu o machetă pentru text a industriei tipografice. Lorem Ipsum a fost macheta standard a industriei încă din secolul al XVI-lea, când un tipograf anonim a luat o planşetă de litere şi le-a amestecat pentru a crea
+            o carte demonstrativă pentru literele respective. Nu doar că a supravieţuit timp de cinci secole, dar şi a facut saltul în tipografia electronică practic neschimbată. A fost popularizată în anii '60 odată cu ieşirea colilor Letraset care conţineau
+            pasaje Lorem Ipsum, iar mai recent, prin programele de publicare pentru calculator, ca Aldus PageMaker care includeau versiuni de Lorem Ipsum.</p>
+          <p>Lorem Ipsum este pur şi simplu o machetă pentru text a industriei tipografice. Lorem Ipsum a fost macheta standard a industriei încă din secolul al XVI-lea, când un tipograf anonim a luat o planşetă de litere şi le-a amestecat pentru a crea
+            o carte demonstrativă pentru literele respective. Nu doar că a supravieţuit timp de cinci secole, dar şi a facut saltul în tipografia electronică practic neschimbată. A fost popularizată în anii '60 odată cu ieşirea colilor Letraset care conţineau
+            pasaje Lorem Ipsum, iar mai recent, prin programele de publicare pentru calculator, ca Aldus PageMaker care includeau versiuni de Lorem Ipsum.</p>
         </div>
       </article>
 
       <article id="jobs" class="content__box">
         <h1 class="content__title">Locuri de munca </h1>
-        <div  onclick="hide()" class="content__hide"><span class="fa fa-minus"></span></div>
+        <div onclick="hide()" class="content__hide"><span class="fa fa-minus"></span></div>
         <div class="content__text">
           <ul class="job list">
             <li class="job__item">
@@ -123,105 +147,105 @@
       <article id="languages" class="content__box">
         <h1 class="content__title">Limbi vorbite</h1>
         <div class="content__hide"><span class="fa fa-minus"></span></div>
-        <div  class="content__text">
+        <div class="content__text">
           <div class="languages">
-          <table class="languages__table">
-            <tr class="languages__title">
-              <th>Languages</th>
-              <th colspan="2">Understending</th>
-              <th colspan="2">Speaking</th>
-              <th>Writing</th>
-            </tr>
-            <tr class="languages__subtitle">
-              <td> </td>
-              <td>Listeining</td>
-              <td>Reading</td>
-              <td>Spoken interaction</td>
-              <td>Spoken production</td>
-              <td> </td>
-            </tr>
-            <tr class="languages__content">
-              <td>Germana</td>
-              <td>C1</td>
-              <td>C1</td>
-              <td>C1</td>
-              <td>C1</td>
-              <td>C1</td>
-            </tr>
-            <tr class="languages__content">
-              <td>Engleza</td>
-              <td>B2</td>
-              <td>B2</td>
-              <td>B1</td>
-              <td>B2</td>
-              <td>B1</td>
-            </tr>
-          </table>
-        </div>
+            <table class="languages__table">
+              <tr class="languages__title">
+                <th>Languages</th>
+                <th colspan="2">Understending</th>
+                <th colspan="2">Speaking</th>
+                <th>Writing</th>
+              </tr>
+              <tr class="languages__subtitle">
+                <td> </td>
+                <td>Listeining</td>
+                <td>Reading</td>
+                <td>Spoken interaction</td>
+                <td>Spoken production</td>
+                <td> </td>
+              </tr>
+              <tr class="languages__content">
+                <td>Germana</td>
+                <td>C1</td>
+                <td>C1</td>
+                <td>C1</td>
+                <td>C1</td>
+                <td>C1</td>
+              </tr>
+              <tr class="languages__content">
+                <td>Engleza</td>
+                <td>B2</td>
+                <td>B2</td>
+                <td>B1</td>
+                <td>B2</td>
+                <td>B1</td>
+              </tr>
+            </table>
+          </div>
         </div>
       </article>
-        <article id="portfolio" class="content__box">
-          <h1 class="content__title">My work</h1>
-          <div class="content__hide"><span class="fa fa-minus"></span></div>
-          <div class="content__text">
-            <ul class="project list">
-              <li class="project__item">
-                <div  class="project__image">
-                  <img src="./images/demo2.jpg" alt="">
-                </div>
-                <div class="project__details">
-                  <div class="project__name">Project name</div>
-                  <a class="project__link" href=""><span class="fa fa-link"></span></a>
-                </div>
-              </li>
-              <li class="project__item">
-                <div  class="project__image">
-                  <img src="./images/demo1.jpg" alt="">
-                </div>
-                <div class="project__details">
-                  <div class="project__name">Project name</div>
-                  <a class="project__link" href=""><span class="fa fa-link"></span></a>
-                </div>
-              </li>
-              <li class="project__item">
-                <div  class="project__image">
-                  <img src="./images/demo2.jpg" alt="">
-                </div>
-                <div class="project__details">
-                  <div class="project__name">Project name</div>
-                  <a class="project__link" href=""><span class="fa fa-link"></span></a>
-                </div>
-              </li>
-              <li class="project__item">
-                <div  class="project__image">
-                  <img src="./images/demo2.jpg" alt="">
-                </div>
-                <div class="project__details">
-                  <div class="project__name">Project name</div>
-                  <a class="project__link" href=""><span class="fa fa-link"></span></a>
-                </div>
-              </li>
-              <li class="project__item">
-                <div  class="project__image">
-                  <img src="./images/demo2.jpg" alt="">
-                </div>
-                <div class="project__details">
-                  <div class="project__name">Project name</div>
-                  <a class="project__link" href=""><span class="fa fa-link"></span></a>
-                </div>
-              </li>
-              <li class="project__item">
-                <div  class="project__image">
-                  <img src="./images/demo2.jpg" alt="">
-                </div>
-                <div class="project__details">
-                  <div class="project__name">Project name</div>
-                  <a class="project__link" href=""><span class="fa fa-link"></span></a>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </article>
+      <article id="portfolio" class="content__box">
+        <h1 class="content__title">My work</h1>
+        <div class="content__hide"><span class="fa fa-minus"></span></div>
+        <div class="content__text">
+          <ul class="project list">
+            <li class="project__item">
+              <div class="project__image">
+                <img src="./images/demo2.jpg" alt="">
+              </div>
+              <div class="project__details">
+                <div class="project__name">Project name</div>
+                <a class="project__link" href=""><span class="fa fa-link"></span></a>
+              </div>
+            </li>
+            <li class="project__item">
+              <div class="project__image">
+                <img src="./images/demo1.jpg" alt="">
+              </div>
+              <div class="project__details">
+                <div class="project__name">Project name</div>
+                <a class="project__link" href=""><span class="fa fa-link"></span></a>
+              </div>
+            </li>
+            <li class="project__item">
+              <div class="project__image">
+                <img src="./images/demo2.jpg" alt="">
+              </div>
+              <div class="project__details">
+                <div class="project__name">Project name</div>
+                <a class="project__link" href=""><span class="fa fa-link"></span></a>
+              </div>
+            </li>
+            <li class="project__item">
+              <div class="project__image">
+                <img src="./images/demo2.jpg" alt="">
+              </div>
+              <div class="project__details">
+                <div class="project__name">Project name</div>
+                <a class="project__link" href=""><span class="fa fa-link"></span></a>
+              </div>
+            </li>
+            <li class="project__item">
+              <div class="project__image">
+                <img src="./images/demo2.jpg" alt="">
+              </div>
+              <div class="project__details">
+                <div class="project__name">Project name</div>
+                <a class="project__link" href=""><span class="fa fa-link"></span></a>
+              </div>
+            </li>
+            <li class="project__item">
+              <div class="project__image">
+                <img src="./images/demo2.jpg" alt="">
+              </div>
+              <div class="project__details">
+                <div class="project__name">Project name</div>
+                <a class="project__link" href=""><span class="fa fa-link"></span></a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </article>
 
       <article id="skills" class="content__box">
         <h1 class="content__title">Skills</h1>
@@ -255,6 +279,7 @@
 
   <script src="./js/jquery-3.2.1.min.js"></script>
   <script src="./js/javascript.js"></script>
-  
+
 </body>
+
 </html>
