--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             <li class="skills__item">
               <span class="fa fa-css3"></span>
               <h4 class="skills__title">Web Design</h4>
-              <h3 class="skills__description">Avansat</h3>
+              <h3 class="skills__description">Mediu</h3>
             </li>
             <li class="skills__item">
               <span class="fa fa-free-code-camp"></span>
